lindera/tests/snapshots/golden_tokenization__ipadic__ipadic_normal.snap
---
source: lindera/tests/golden_tokenization.rs
expression: "render(& tokenizer, JAPANESE_TEXTS)"
---
## 関西国際空港限定トートバッグ
関西国際空港	0..18	0:1	名詞,固有名詞,組織,*,*,*,関西国際空港,カンサイコクサイクウコウ,カンサイコクサイクーコー
限定	18..24	1:1	名詞,サ変接続,*,*,*,*,限定,ゲンテイ,ゲンテイ
トートバッグ	24..42	2:1	名詞,一般,*,*,*,*,*,*,*

## すもももももももものうち
すもも	0..9	0:1	名詞,一般,*,*,*,*,すもも,スモモ,スモモ
も	9..12	1:1	助詞,係助詞,*,*,*,*,も,モ,モ
もも	12..18	2:1	名詞,一般,*,*,*,*,もも,モモ,モモ
も	18..21	3:1	助詞,係助詞,*,*,*,*,も,モ,モ
もも	21..27	4:1	名詞,一般,*,*,*,*,もも,モモ,モモ
の	27..30	5:1	助詞,連体化,*,*,*,*,の,ノ,ノ
うち	30..36	6:1	名詞,非自立,副詞可能,*,*,*,うち,ウチ,ウチ

## 日本語の形態素解析を行うことができます。
日本語	0..9	0:1	名詞,一般,*,*,*,*,日本語,ニホンゴ,ニホンゴ
の	9..12	1:1	助詞,連体化,*,*,*,*,の,ノ,ノ
形態素	12..21	2:1	名詞,一般,*,*,*,*,形態素,ケイタイソ,ケイタイソ
解析	21..27	3:1	名詞,サ変接続,*,*,*,*,解析,カイセキ,カイセキ
を	27..30	4:1	助詞,格助詞,一般,*,*,*,を,ヲ,ヲ
行う	30..36	5:1	動詞,自立,*,*,五段・ワ行促音便,基本形,行う,オコナウ,オコナウ
こと	36..42	6:1	名詞,非自立,一般,*,*,*,こと,コト,コト
が	42..45	7:1	助詞,格助詞,一般,*,*,*,が,ガ,ガ
でき	45..51	8:1	動詞,自立,*,*,一段,連用形,できる,デキ,デキ
ます	51..57	9:1	助動詞,*,*,*,特殊・マス,基本形,ます,マス,マス
。	57..60	10:1	記号,句点,*,*,*,*,。,。,。

## Linderaは形態素解析エンジンです。ユーザー辞書も利用可能です。
Lindera	0..7	0:1	名詞,固有名詞,組織,*,*,*,*,*,*
は	7..10	1:1	助詞,係助詞,*,*,*,*,は,ハ,ワ
形態素	10..19	2:1	名詞,一般,*,*,*,*,形態素,ケイタイソ,ケイタイソ
解析	19..25	3:1	名詞,サ変接続,*,*,*,*,解析,カイセキ,カイセキ
エンジン	25..37	4:1	名詞,一般,*,*,*,*,エンジン,エンジン,エンジン
です	37..43	5:1	助動詞,*,*,*,特殊・デス,基本形,です,デス,デス
。	43..46	6:1	記号,句点,*,*,*,*,。,。,。
ユーザー	46..58	7:1	名詞,一般,*,*,*,*,ユーザー,ユーザー,ユーザー
辞書	58..64	8:1	名詞,一般,*,*,*,*,辞書,ジショ,ジショ
も	64..67	9:1	助詞,係助詞,*,*,*,*,も,モ,モ
利用	67..73	10:1	名詞,サ変接続,*,*,*,*,利用,リヨウ,リヨー
可能	73..79	11:1	名詞,形容動詞語幹,*,*,*,*,可能,カノウ,カノー
です	79..85	12:1	助動詞,*,*,*,特殊・デス,基本形,です,デス,デス
。	85..88	13:1	記号,句点,*,*,*,*,。,。,。

## １９８４年と1984年、ＡＢＣとabc。
１	0..3	0:1	名詞,数,*,*,*,*,１,イチ,イチ
９	3..6	1:1	名詞,数,*,*,*,*,９,キュウ,キュー
８	6..9	2:1	名詞,数,*,*,*,*,８,ハチ,ハチ
４	9..12	3:1	名詞,数,*,*,*,*,４,ヨン,ヨン
年	12..15	4:1	名詞,接尾,助数詞,*,*,*,年,ネン,ネン
と	15..18	5:1	助詞,並立助詞,*,*,*,*,と,ト,ト
1984	18..22	6:1	名詞,数,*,*,*,*,*,*,*
年	22..25	7:1	名詞,接尾,助数詞,*,*,*,年,ネン,ネン
、	25..28	8:1	記号,読点,*,*,*,*,、,、,、
ＡＢＣ	28..37	9:1	名詞,固有名詞,組織,*,*,*,ＡＢＣ,エイビーシー,エイビーシー
と	37..40	10:1	助詞,並立助詞,*,*,*,*,と,ト,ト
abc	40..43	11:1	名詞,一般,*,*,*,*,*,*,*
。	43..46	12:1	記号,句点,*,*,*,*,。,。,。

## 羽田空港から東京タワーまでタクシーで３０分です。
羽田空港	0..12	0:1	名詞,固有名詞,一般,*,*,*,羽田空港,ハネダクウコウ,ハネダクーコー
から	12..18	1:1	助詞,格助詞,一般,*,*,*,から,カラ,カラ
東京	18..24	2:1	名詞,固有名詞,地域,一般,*,*,東京,トウキョウ,トーキョー
タワー	24..33	3:1	名詞,一般,*,*,*,*,タワー,タワー,タワー
まで	33..39	4:1	助詞,副助詞,*,*,*,*,まで,マデ,マデ
タクシー	39..51	5:1	名詞,一般,*,*,*,*,タクシー,タクシー,タクシー
で	51..54	6:1	助詞,格助詞,一般,*,*,*,で,デ,デ
３	54..57	7:1	名詞,数,*,*,*,*,３,サン,サン
０	57..60	8:1	名詞,数,*,*,*,*,０,ゼロ,ゼロ
分	60..63	9:1	名詞,接尾,助数詞,*,*,*,分,フン,フン
です	63..69	10:1	助動詞,*,*,*,特殊・デス,基本形,です,デス,デス
。	69..72	11:1	記号,句点,*,*,*,*,。,。,。
